plang/testing/logs/false-incorrect/130/program130.p.p
f E2mr.

se (ip) A.
a S9I X ZU66.


wpk r wsrU (ZIB).

eVM p6oGI Yq z6tg.
yuT0 (NX6) Qt r33cX :- gpDmr Q f (dn L F Vg); (i Bi Ct).


xOZ SJ2A (vKY Ps e RjS) (kNY8c (p0UO) (xpbb LQ t1a JDE8 Wd) (j (t lonn) (i5q1 (Y) (g G9hoz (hF (PcM)) (Ot) (X8kg)) vHB1T (n UgtF)) PeEfz pu) Z) :- ((uZ; cgqx4 uI FpTP N6b; gQAPh; (adHQb (v (HY99) (Iek) Rlj (giBTy JHbU)) m (jCJLG iS (O)) D))).
y GvvR (Mf).


? tH (Nagvb); ak (rXRYx (qX ItXmR v2T3 (jF)) (ElBtb) ME) (M4p), (b8hK; vvB GAzs m Ira; dWC (G) YzpLs wP2 VEqs, nwR (Fom) (MWJb)).



